# toDolist

./: .gitignore  README.md  package.json  vite.config.js
src/: App.jsx  i18n.js  index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: BottomPanel.jsx  CollapsedBar.jsx  DateBar.jsx  DatePicker.jsx  ScheduledOptions.jsx  SettingsModal.jsx  TaskCard.jsx  TaskList.jsx  TimePicker.jsx  TitleBar.jsx  WelcomeModal.jsx
src/styles/: main.css  variables.css
src/styles/components/: bottom-panel.css  collapse-bar.css  datebar.css  datepicker.css  empty-state.css  search-bar.css  settings.css  task-card.css  timepicker.css  titlebar.css
